--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="home" class="section">
             <div class="content-wrapper">
                 <h1>Welcome to Palmer's Portfolio</h1>
-                <p class="subtitle">Creative Developer & Designer</p>
+                <h2 class="subtitle">Creative Developer & Designer</h2>
             </div>
         </section>
 
