--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="main-nav">
         <div class="nav-logo">
-            <img src="logos/palm_tree.png" alt="Logo" class="logo-img">
+            <img src="logos/palm_tree.png" alt="Palmer's Portfolio Palm Tree Logo" class="logo-img">
         </div>
         <ul class="nav-container">
             <li class="active">
